--- a/chat/api/frontends/client/ui/web/static/site.css
+++ b/chat/api/frontends/client/ui/web/static/site.css
@@ -17,6 +17,33 @@
         background-color: var(--gray-11);
         padding: var(--size-4);
         border-radius: var(--radius-3);
+        gap: var(--size-2);
+
+        .user {
+            color: var(--gray-7);
+            background-color: var(--gray-9);
+            border-radius: var(--radius-1);
+            padding: var(--size-2) var(--size-4);
+            font-size: var(--font-size-3);
+            font-weight: bold;
+
+            display: flex;
+            align-items: center;
+            gap: var(--size-2);
+            justify-content: space-between;
+
+            &:hover {
+                background-color: var(--gray-8);
+                color: var(--gray-1);
+                cursor: pointer;
+            }
+
+        }
+
+        .user.active {
+            color: var(--blue-9);
+            background-color: var(--blue-1);
+        }
     }
 
     .rightPane {
@@ -24,6 +51,7 @@
         flex-direction: column;
         flex-grow: 1;
         gap: var(--size-4);
+        overflow: hidden;
     }
 
     #messages {
@@ -36,6 +64,7 @@
         padding: var(--size-4);
         border-radius: var(--radius-3);
         gap: var(--size-4);
+        overflow: auto;
 
         .message {
             display: flex;
