working version with polling

--- a/chat/api/frontends/client/ui/web/routes_chat.templ
+++ b/chat/api/frontends/client/ui/web/routes_chat.templ
@@ -102,6 +102,7 @@ templ chatMessageFragment(messages ...app.Message) {
 					<div class="text">{ string(msg.Content) }</div>
 				</div>
 			}
+			<div data-scroll-into-view></div>
 		}
 	</div>
 }
